--- a/src/main/resources/templates/candidates/create.html
+++ b/src/main/resources/templates/candidates/create.html
@@ -31,11 +31,11 @@
         <form class="mt-3">
             <div class="mb-3">
                 <label for="title" class="form-label"><b>Название</b></label>
-                <input type="text" class="form-control" id="title" placeholder="Предлагая должность, например, Ведущий Java разработчик">
+                <input type="text" class="form-control" id="title" name="title" placeholder="Предлагая должность, например, Ведущий Java разработчик">
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label"><b>Описание</b></label>
-                <textarea class="form-control" id="description" rows="25" placeholder="Опишите ваши навыки"></textarea>
+                <textarea class="form-control" id="description" name="description" rows="25" placeholder="Опишите ваши навыки"></textarea>
             </div>
             <div class="mb-3 row">
                 <div class="col-6"></div>
