--- a/src/main/resources/templates/candidates/list.html
+++ b/src/main/resources/templates/candidates/list.html
@@ -40,7 +40,7 @@
                 <tbody>
                 <tr th:each="candidate: ${candidates}">
                     <td th:text="${candidate.id}" />
-                    <td th:text="${candidate.name}" />
+                    <td><a th:text="${candidate.name}" th:href="@{/candidates/{candidateID}(candidateID=${candidate.id})}"></a></td>
                     <td th:text="${#temporals.format(candidate.creationDate, 'dd-MM-yyyy HH:mm')}" />
                 </tr>
                 </tbody>
